# PraisonAI

./: .cursorrules  .env.example  .eslintrc  .gitignore  .praisoncontext  .praisonignore  .praisoninclude  .readthedocs.yml  .replit  .tokentoll.yml  404.html  AGENTS.md  AGENT_MIGRATION_LEDGER.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  CNAME  CONTRIBUTING.md  DEEPSEEK_TOOLS_FIX.md  Dockerfile  Dockerfile.dev  FRAMEWORK_DEFAULTS_CHANGE.md  GNAP_INTEGRATION_GUIDE.md  GNAP_README.md  HANDOFF_SECURITY.md  ISSUE_878_REPRODUCTION_GUIDE.md  JITTER_CONSOLIDATION_ANALYSIS.md  LICENSE  LOGGING.md  MIGRATION.md  MIGRATION_NOTES.md  Makefile  N8N_INTEGRATION_TEST_GUIDE.md  PRAISONAI_PR_REVIEWER_SETUP.md  PraisonAI.code-workspace  README.md  RELEASE_INTEGRATION.md  SECURITY.md  SECURITY_RELEASE.md  SECURITY_TRIAGE.md  (+260 more)
agents/: .cursorrules  .gitignore  any-llm-think.py  async_example.py  async_example_full.py  async_example_full_multigroups.py  autonomous-agent.py  basic-agents.py  code-analysis-streamlit.py  code_review.py  context-agents.py  cot-agents.py  crewai-tools-example.py  deepseek-agents.py  deepseek-reasoning-agents.py  deepseek-reasoning-output-tokens.py  deepseek-reasoning-steps-ollama.py  evaluator-optimizer.py  example.py  example2.py  example_callback.py  example_custom_tools.py  example_sequential.py  hackathon-judge-agent-code.py  knowledge-agents.py  knowledge-direct-simple-test.py  knowledge-direct-test.py  knowledge-large-pdf-test.py  knowledge-test.py  langchain_example.py  litellm-reasoning.py  llm-deepseek-reasoning-agents.py  md.py  memory_example.py  memory_simple.py  multimodal.py  orchestrator-workers.py  parallelization.py  pyproject.toml  repetitive-agents.py  (+10 more)
agents/.devcontainer/: Dockerfile
agents/agents/task/: task.py
agents/praisonaiagents/: __init__.py  main.py  pyproject.toml
agents/praisonaiagents/agent/: agent.py
agents/praisonaiagents/agents/: __init__.py  agents.py  autoagents.py
agents/praisonaiagents/knowledge/: __init__.py  knowledge.py
agents/praisonaiagents/llm/: llm.py
agents/praisonaiagents/memory/: memory.py
agents/praisonaiagents/process/: process.py
agents/praisonaiagents/task/: task.py
agents/praisonaiagents/tools/: __init__.py  arxiv_tools.py  csv_tools.py  duckdb_tools.py  duckduckgo_tools.py  excel_tools.py  file_tools.py  pandas_tools.py  python_tools.py  shell_tools.py  tools.py  wikipedia_tools.py  xml_tools.py  yfinance_tools.py
src/praisonai/: .env.example  .gitignore  .praisoncontext  .praisonignore  .praisoninclude  Dockerfile.bot  README.md  SANDLOCK_README.md  agents-advanced.yaml  agents.yaml  agents_n8n.json  api.py  api_server.py  docker-compose.bot.yml  knowledge.db  package-lock.json  package.json  praisonai.rb  pyproject.toml  pytest.ini  requirements.txt  schedule_config.yaml.example  server.json  setup.sh  test_agents.yaml  test_routing_live.py  tools.py
src/praisonai-agents/: .cursorrules  .gitignore  .praisonignore  01_basic_agent_with_monitoring.py  01_basic_token_tracking.py  02_multi_agent_workflow_monitoring.py  03_agent_with_tools_monitoring.py  04_async_agent_monitoring.py  05_error_handling_monitoring.py  06_memory_agent_monitoring.py  07_hierarchical_agents_monitoring.py  08_custom_tools_monitoring.py  10_comprehensive_dashboard.py  AGENTS.md  CLAUDE.md  DOCS_PARITY.md  INSTALLATION_SUMMARY.md  LLM_OPTIMIZATION_SUMMARY.md  LOGGING.md  OPENAI_CLIENT_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  TELEMETRY_SUMMARY.md  agent-profile.py  agent_guardrails_example.py  agentic_parallelisation.py  any-llm-agents-async.py  async-tavily-agents-gemini.py  auto_langtrace.py  autoagents-tavily.py  autoagents-tools.py  autonomous-agent.py  basic-agents-fixed.py  basic-agents-tools.py  basic-agents.py  benchmark_optimizations.py  callback_log.txt  callback_test_log.txt  chat_mixin_update.py  check_syntax.py  (+233 more)
src/praisonai-agents/.devcontainer/: devcontainer.json
src/praisonai-agents/benchmarks/: BENCHMARK_RESULTS.md  EXECUTION_BENCHMARK_RESULTS.md  INSTANTIATION_RCA.md  REAL_BENCHMARK_RESULTS.md  SIMPLE_BENCHMARK_RESULTS.md  TOOLS_BENCHMARK_RESULTS.md  deep_profiling.py  detailed_profiling_benchmark.py  execution_benchmark.py  import_time.py  memory_usage.py  param_impact_benchmark.py  performance_benchmark.py  quick_benchmark.py  real_benchmark.py  response_benchmark.py  results.console  simple_benchmark.py  tools_benchmark.py
src/praisonai-agents/docs/: GEMINI_INTERNAL_TOOLS.md
src/praisonai-agents/examples/: context_compaction_example.py  fast_context_example.py  large_context_knowledge.py  lite_agent_example.py  llm_config_usage_example.py  mcp_http_streaming_example.py  mcp_server_example.py  memory_with_tracing_example.py  smoke_test_condition_syntax.py  specialized_agents_example.py  streaming_reasoning_example.py  web_search_example.py
src/praisonai-agents/praisonaiagents/: __init__.py  _config.py  _lazy.py  _logging.py  _resolver_helpers.py  _server_registry.py  _version.py  _warning_patch.py  allowed_tools_filter.py  approval.py  auto_instrument.py  callbacks.py  client.py  display.py  errors.py  flow_display.py  handoff.py  hermes_filter.py  main.py  metrics.py  models.py  paths.py  performance_cli.py  performance_dashboard.py  performance_monitor.py  reasoning.py  run_outcome.py  secrets.py  server_manager.py  session.py  toolsets.py  utils.py
src/praisonai-agents/tests/: .windsurfrules  __init__.py  any-llm-agents-async.py  async-tavily-agents-gemini.py  async-tavily-agents.py  async_example.py  async_example_full.py  auto_agents_example.py  (+206 more)
src/praisonai-bot/: README.md  gateway.yaml  pyproject.toml  pytest.ini
src/praisonai-browser/: README.md  pyproject.toml
src/praisonai-code/: .gitignore  README.md  pyproject.toml
src/praisonai-mcp/: README.md  pyproject.toml
src/praisonai-platform/: UI_INTEGRATION_REPORT.md  pyproject.toml
src/praisonai-rust/: AGENTS.md  Cargo.toml  DOCS_PARITY.md  FEATURE_PARITY_TRACKER.json  PARITY.md  README.md
src/praisonai-sandbox/: README.md  pyproject.toml
src/praisonai-train/: README.md  pyproject.toml
(+6146 files in other folders)
