[tool.poetry]
name = "PraisonAI"
version = "0.0.44"
description = "PraisonAI application combines AutoGen and CrewAI or similar frameworks into a low-code solution for building and managing multi-agent LLM systems, focusing on simplicity, customization, and efficient human-agent collaboration."
authors = ["Mervin Praison"]
license = ""
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI"

[tool.setuptools]
packages = ["PraisonAI"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = ">=13.7"
pyautogen = ">=0.2.19"
crewai = ">=0.32.0"
markdown = ">=3.5"
praisonai-tools = ">=0.0.7"
pyparsing = ">=3.0.0" # Added to fix a colab issue. Temp Fix.
chainlit = {version = "^1.1.301", optional = true}
gradio = {version = ">=4.26.0", optional = true}
flask = {version = ">=3.0.0", optional = true}
agentops = {version = ">=0.2.6", optional = true}
langchain-google-genai = {version = ">=1.0.4", optional = true}
langchain-anthropic = {version = ">=0.1.13", optional = true}
langchain-openai = {version = ">=0.1.7", optional = true}
langchain-cohere = {version = ">=0.1.4", optional = true}
litellm = {version = ">=1.41.8", optional = true}

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
markdown-include = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-glightbox = "*"
pymdown-extensions = "*"
Pygments = "*"
mkdocstrings = "*"
mkdocs-apidoc = "*"
mkdocstrings-python = "*"
pdoc3 = "*"

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pre-commit = "3.7.1"
unittest-xml-reporting = "3.2.0"
xmlrunner = "*"
unittest2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pre-commit = "3.7.1"
unittest-xml-reporting = "3.2.0"
mkdocs = "*"
markdown-include = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-glightbox = "*"
pymdown-extensions = "*"
Pygments = "*"
mkdocstrings = "*"
mkdocs-apidoc = "*"
mkdocstrings-python = "*"
pdoc3 = "*"
xmlrunner = "*"
unittest2 = "*"
chainlit = "^1.1.301"
gradio = ">=4.26.0"
flask = ">=3.0.0"
agentops = ">=0.2.6"
langchain-google-genai = ">=1.0.4"
langchain-anthropic = ">=0.1.13"
langchain-openai = ">=0.1.7"
langchain-cohere = ">=0.1.4"
litellm = ">=1.41.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
praisonai = "praisonai.__main__:main"

[tool.poetry.extras]
ui = ["chainlit"]
gradio = ["gradio"]
api = ["flask"]
agentops = ["agentops"]
google = ["langchain-google-genai"]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
cohere = ["langchain-cohere"]
chat = ["chainlit", "litellm"]