[tool.poetry]
name = "PraisonAI"
version = "1.0.2"
description = "PraisonAI application combines AutoGen and CrewAI or similar frameworks into a low-code solution for building and managing multi-agent LLM systems, focusing on simplicity, customization, and efficient human-agent collaboration."
authors = ["Mervin Praison"]
license = ""
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI"

[tool.setuptools]
packages = ["PraisonAI"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = ">=13.7"
markdown = ">=3.5"
pyparsing = ">=3.0.0"
python-dotenv = {version = ">=0.19.0"}
instructor = ">=0.4.8"
pyautogen = {version = ">=0.2.19", optional = true}
crewai = {version = ">=0.32.0", optional = true}
praisonai-tools = {version = ">=0.0.7", optional = true}
chainlit = {version = "==1.3.0rc1", optional = true}
gradio = {version = ">=4.26.0", optional = true}
flask = {version = ">=3.0.0", optional = true}
agentops = {version = ">=0.3.12", optional = true}
langchain-google-genai = {version = ">=1.0.4", optional = true}
langchain-anthropic = {version = ">=0.1.13", optional = true}
langchain-openai = {version = ">=0.1.7", optional = true}
langchain-cohere = {version = ">=0.1.4", optional = true}
litellm = {version = ">=1.41.8", optional = true}
aiosqlite= {version = ">=0.20.0", optional = true}
greenlet = {version = ">=3.0.3", optional = true}
tavily-python = {version = "==0.5.0", optional=true}
crawl4ai = {version = "==0.3.4", optional = true}
websockets = {version = ">=12.0", optional = true}
plotly = {version = ">=5.24.0", optional = true}
yfinance = {version = ">=0.2.44", optional = true}
duckduckgo_search = {version = ">=6.3.0", optional = true}
twilio = {version = ">=7.0.0", optional = true}
fastapi = {version = ">=0.95.0", optional = true}
uvicorn = {version = ">=0.20.0", optional = true}
flaml = {version = ">=2.3.1", extras = ["automl"], optional = true}
pyngrok = {version = ">=1.4.0", optional = true}
sqlalchemy = {version = ">=2.0.36", optional = true}
playwright = {version = ">=1.47.0", optional = true}
openai = {version = ">=1.54.0", optional = true}
pydantic = {version = "<=2.10.1", optional = true}

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
markdown-include = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-glightbox = "*"
pymdown-extensions = "*"
Pygments = "*"
mkdocstrings = "*"
mkdocs-apidoc = "*"
mkdocstrings-python = "*"
pdoc3 = "*"

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pre-commit = "3.7.1"
unittest-xml-reporting = "3.2.0"
xmlrunner = "*"
unittest2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pre-commit = "3.7.1"
unittest-xml-reporting = "3.2.0"
mkdocs = "*"
markdown-include = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-glightbox = "*"
pymdown-extensions = "*"
Pygments = "*"
mkdocstrings = "*"
mkdocs-apidoc = "*"
mkdocstrings-python = "*"
pdoc3 = "*"
xmlrunner = "*"
unittest2 = "*"
chainlit = "==1.3.0rc1"
gradio = ">=4.26.0"
flask = ">=3.0.0"
agentops = ">=0.3.12"
langchain-google-genai = ">=1.0.4"
langchain-anthropic = ">=0.1.13"
langchain-openai = ">=0.1.7"
langchain-cohere = ">=0.1.4"
litellm = ">=1.41.8"
aiosqlite = ">=0.20.0"
greenlet = ">=3.0.3"

[build-system]
requires = ["poetry-core", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
praisonai = "praisonai.__main__:main"
setup-conda-env = "setup.setup_conda_env:main"
praisonai-call = "praisonai.api.call:main"

[tool.poetry.extras]
ui = ["chainlit"]
gradio = ["gradio"]
api = ["flask"]
agentops = ["agentops"]
google = ["langchain-google-genai"]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
cohere = ["langchain-cohere"]
chat = [
    "chainlit", 
    "litellm", 
    "aiosqlite", 
    "greenlet", 
    "tavily-python", 
    "crawl4ai",
    "sqlalchemy",
    "playwright",
    "rich",
    "instructor",
    "pydantic"
]
code = [
    "chainlit", 
    "litellm", 
    "aiosqlite", 
    "greenlet", 
    "tavily-python", 
    "crawl4ai",
    "sqlalchemy",
    "playwright",
    "pydantic"
]
train = ["setup-conda-env"]
realtime = [
    "chainlit", 
    "litellm", 
    "aiosqlite", 
    "greenlet", 
    "tavily-python", 
    "crawl4ai", 
    "websockets", 
    "plotly", 
    "yfinance", 
    "duckduckgo_search",
    "sqlalchemy"
]
call = [
    "twilio", 
    "fastapi", 
    "uvicorn", 
    "websockets", 
    "python-dotenv", 
    "flaml", 
    "pyngrok", 
    "rich",
    "openai",
    "instructor"
]
crewai = ["crewai", "praisonai-tools", "instructor"]
autogen = ["pyautogen", "praisonai-tools", "instructor", "crewai"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.build]
generate-setup-file = false
script = "praisonai/setup/post_install.py"
