[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praisonaiagents"
version = "0.0.35"
description = "Praison AI agents for completing complex tasks with Self Reflection Agents"
authors = [
    { name="Mervin Praison" }
]
dependencies = [
    "pydantic",
    "rich",
    "openai"
]

[project.optional-dependencies]
memory = [
    "chromadb>=0.6.0"
] 