[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praisonaiagents"
version = "0.0.52"
description = "Praison AI agents for completing complex tasks with Self Reflection Agents"
authors = [
    { name="Mervin Praison" }
]
dependencies = [
    "pydantic",
    "rich",
    "openai"
]

[project.optional-dependencies]
memory = [
    "chromadb>=0.5.23"
]

knowledge = [
    "mem0ai>=0.1.0",
    "chromadb==0.5.23",
    "markitdown",
    "chonkie"
]

# Add LLM dependencies
llm = [
    "litellm>=1.50.0",
    "pydantic>=2.4.2"
]

# Combined features
all = [
    "praisonaiagents[memory]",
    "praisonaiagents[knowledge]",
    "praisonaiagents[llm]"
]