[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praisonaiagents"
version = "0.0.126"
description = "Praison AI agents for completing complex tasks with Self Reflection Agents"
requires-python = ">=3.10"
authors = [
    { name="Mervin Praison" }
]
dependencies = [
    "pydantic",
    "rich",
    "openai",
    "mcp>=1.6.0",
    "posthog>=3.0.0",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0"
]

memory = [
    "chromadb>=1.0.0",
    "litellm>=1.72.0",
]

knowledge = [
    "mem0ai>=0.1.0",
    "chromadb>=1.0.0",
    "markitdown[all]>=0.1.0",
    "chonkie>=1.0.2"
]

# Graph memory support (includes Mem0 with graph capabilities)
graph = [
    "mem0ai[graph]>=0.1.0",
    "chromadb>=1.0.0"
]

# Add LLM dependencies
llm = [
    "litellm>=1.72.0",
    "pydantic>=2.4.2"
]

# Add API dependencies
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0"
]

# Telemetry dependencies
telemetry = [
    "posthog>=3.0.0"
]

# Combined features
all = [
    "praisonaiagents[memory]",
    "praisonaiagents[knowledge]",
    "praisonaiagents[graph]",
    "praisonaiagents[llm]",
    "praisonaiagents[mcp]",
    "praisonaiagents[api]",
    "praisonaiagents[telemetry]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["praisonaiagents*"]
