[project]
name = "praisonai-code"
version = "0.0.22"
description = "Agentic terminal CLI for PraisonAI — the terminal-native agent (run, chat, code, runtime, cli backends) extracted from the praisonai wrapper."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Mervin Praison" }
]
dependencies = [
    "praisonaiagents>=1.6.126",
    "rich>=13.7",
    "typer>=0.12.0",
    "click>=8.4.2",
    "textual>=0.47.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.19.0",
    "litellm>=1.83.14,<2",
    "mcp>=1.20.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI"

[project.scripts]
praisonai-code = "praisonai_code.__main__:main"

[tool.uv.sources]
praisonaiagents = { path = "../praisonai-agents" }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["praisonai_code*"]

[tool.setuptools.package-data]
"praisonai_code.cli.configuration" = ["*.json"]
