[project]
name = "praisonai-mcp"
version = "0.0.5"
description = "MCP server hosting for PraisonAI — expose agents and tools to Cursor, Claude Desktop, and other MCP clients."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Mervin Praison" }
]
dependencies = [
    "praisonaiagents>=1.6.126",
    "mcp>=1.20.0",
    "rich>=13.7",
    "typer>=0.12.0",
    "click>=8.4.2",
]

[project.optional-dependencies]
server = [
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]
auth = [
    "httpx>=0.27.0",
]
all = [
    "praisonai-mcp[server,auth]",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI"

[project.scripts]
praisonai-mcp = "praisonai_mcp.__main__:main"

[tool.uv.sources]
praisonaiagents = { path = "../praisonai-agents" }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["praisonai_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
